[package]
name = "shader_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
# lalrpop-util is the runtime library for our generated parser.
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
# regex is used by the lexer within lalrpop.
regex = "1.10.4"

[build-dependencies]
# lalrpop is the parser generator itself, which runs at build time.
lalrpop = "0.20.2"
